<resources>
    <string name="app_name">Big Red App</string>
    <string name="action_about">About</string>
    <string name="action_filter">Filter</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="search_hint">ex: ives, baker, risley...</string>
    <string name="title_activity_dining_location">DiningLocationActivity</string>
    <string name="title_activity_event">EventActivity</string>

    <string name="no_menu_available">No menus available for here, yet! But check out an all-you-can-eat place!</string>

    <string name="about_title">Big Red App for Android</string>
    <string name="about_description">This app is still in beta stage, and all bug reports, contributions, etc. are appreciated!</string>
    <string name="about_check_us_out">Please check us out on:</string>
    <string name="about_github_link"><a href="https://github.com/TrevorEdwards/bigredapp-android">GitHub</a></string>
    <string name="about_or_email">Or, send an email to:</string>
    <string name="about_support_email">tre23@cornell.edu</string>
    <string name="about_open_source_is_great">This app will always be free and open source.</string>
    <string name="title_activity_map_search">MapSearchActivity</string>
    <string name="title_activity_filter_chooser">FilterChooserActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fragment_people_search_button">Search</string>
</resources>
