<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/about_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="60sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_description"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_check_us_out"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_github_link"
        android:id="@+id/github_link"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_or_email"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_support_email"
        android:autoLink="email"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_open_source_is_great"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="30sp" />
</LinearLayout>